correction of compilation bug

--- a/blog-front/src/app/homepage/homepage.component.html
+++ b/blog-front/src/app/homepage/homepage.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron jumbotron-fluid">
 	<div class="container">
-		<h1 class="display-3">Fluid jumbotron </h1>
-		<p class="lead"> This is a test </p>
+		<h1 class="display-3"> Welcome to the Blog Rails </h1>
+		<p class="lead"> Using this tool you can post, check, edit and delete messages </p>
 	</div>
 </div>
