--- a/blog-front/src/app/post/post-new.component.html
+++ b/blog-front/src/app/post/post-new.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron"> 
 	<h1 class="display-3"> Create New Post </h1>
-	<p class="lead"> This is a simple post page. </p>
+	<p class="lead"> Here you can post a new message. </p>
 	<hr class="m-y-md">
 </div>
 
